Fixed some bad spacing issues

--- a/src/sass/components/cards.scss
+++ b/src/sass/components/cards.scss
@@ -2,37 +2,6 @@
 // Shared Aspects 
 // -------------------
 
-// Card Containers 
-
-%card-container { 
-    padding: $standard-margin 0; 
-    display: flex; 
-    flex-direction: column; 
-}
-
-.blog-card-container { 
-    @extend %card-container; 
-
-    @media (max-width: $small-devices) {
-        align-items: center; 
-        justify-content: flex-start; 
-    }
-}
-
-.about-card-container { 
-    @extend %card-container; 
-
-    @media (max-width: $medium-devices) {
-        flex-direction: row; 
-        justify-content: space-between; 
-    }
-
-    @media (max-width: $small-devices) {
-        flex-direction: column; 
-        align-items: center; 
-        justify-content: flex-start; 
-    }
-}
 
 // Cards 
 %card-base { 
@@ -110,6 +79,7 @@
     }
 
     @media (max-width: $small-devices) { 
+        margin-right: 0; 
         width: $small-card-size; 
     }
 }
